--- a/Hawaii/UI/Controller/Cell/TeamCalendarCollectionViewCell.xib
+++ b/Hawaii/UI/Controller/Cell/TeamCalendarCollectionViewCell.xib
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -20,24 +19,24 @@
                 <rect key="frame" x="0.0" y="0.0" width="67" height="59"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="79P-4T-ZpC">
+                        <rect key="frame" x="18.5" y="10.5" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="9Eh-Nf-f6S"/>
+                            <constraint firstAttribute="width" constant="30" id="dPh-R1-xJk"/>
+                            <constraint firstAttribute="width" secondItem="79P-4T-ZpC" secondAttribute="height" multiplier="1:1" id="lxU-fh-ex1"/>
+                        </constraints>
+                    </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="TeamCalendarCollectionViewCell" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L9k-Qe-j5R">
                         <rect key="frame" x="12.5" y="15" width="42" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="79P-4T-ZpC">
-                        <rect key="frame" x="31" y="49" width="5" height="5"/>
-                        <color key="backgroundColor" red="1" green="0.94876855979999997" blue="0.14785282899999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstAttribute="width" secondItem="79P-4T-ZpC" secondAttribute="height" multiplier="1:1" id="lxU-fh-ex1"/>
-                            <constraint firstAttribute="width" constant="5" id="sIZ-xm-dHZ"/>
-                        </constraints>
-                    </view>
                 </subviews>
             </view>
             <constraints>
-                <constraint firstItem="79P-4T-ZpC" firstAttribute="bottom" secondItem="ZTg-uK-7eu" secondAttribute="bottom" constant="-5" id="4No-bj-nOC"/>
+                <constraint firstItem="79P-4T-ZpC" firstAttribute="centerY" secondItem="L9k-Qe-j5R" secondAttribute="centerY" id="KiS-7r-na6"/>
                 <constraint firstItem="79P-4T-ZpC" firstAttribute="centerX" secondItem="ZTg-uK-7eu" secondAttribute="centerX" id="exk-uA-sRq"/>
                 <constraint firstItem="L9k-Qe-j5R" firstAttribute="centerX" secondItem="ZTg-uK-7eu" secondAttribute="centerX" id="gjh-I9-a0B"/>
                 <constraint firstItem="L9k-Qe-j5R" firstAttribute="top" secondItem="ZTg-uK-7eu" secondAttribute="top" constant="15" id="jOM-gn-hgf"/>
