--- a/Hawaii/UI/Storyboard/Dashboard.storyboard
+++ b/Hawaii/UI/Storyboard/Dashboard.storyboard
@@ -295,7 +295,7 @@
                                 <rect key="frame" x="20" y="114" width="335" height="594"/>
                                 <subviews>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="daA-wR-cf3">
-                                        <rect key="frame" x="0.0" y="0.0" width="335" height="594"/>
+                                        <rect key="frame" x="10" y="0.0" width="315" height="594"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="594" id="1Si-ke-HeW"/>
@@ -308,7 +308,7 @@
                                     <constraint firstAttribute="height" constant="594" id="BRc-lU-gMe"/>
                                     <constraint firstItem="daA-wR-cf3" firstAttribute="top" secondItem="CGA-en-kvo" secondAttribute="top" id="hJo-41-v7m"/>
                                     <constraint firstItem="daA-wR-cf3" firstAttribute="centerY" secondItem="CGA-en-kvo" secondAttribute="centerY" id="xnS-Io-n6j"/>
-                                    <constraint firstItem="daA-wR-cf3" firstAttribute="leading" secondItem="CGA-en-kvo" secondAttribute="leading" id="zfk-gt-Zwp"/>
+                                    <constraint firstItem="daA-wR-cf3" firstAttribute="leading" secondItem="CGA-en-kvo" secondAttribute="leading" constant="10" id="zfk-gt-Zwp"/>
                                 </constraints>
                             </view>
                         </subviews>
