--- a/Hawaii/UI/Storyboard/More.storyboard
+++ b/Hawaii/UI/Storyboard/More.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="l68-Bs-Wvo">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="l68-Bs-Wvo">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,10 +18,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VCU-NF-zFQ">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="42"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bnP-HR-5fh">
+                                <rect key="frame" x="127.5" y="32" width="120" height="120"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="42" id="YxX-1G-B7S"/>
+                                    <constraint firstAttribute="width" constant="120" id="3E3-bA-pOg"/>
+                                    <constraint firstAttribute="width" secondItem="bnP-HR-5fh" secondAttribute="height" multiplier="1:1" id="qbI-Np-sOJ"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="svj-aa-ADA">
+                                <rect key="frame" x="166.5" y="184" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="unx-sN-1Fn">
+                                <rect key="frame" x="166.5" y="219" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VCU-NF-zFQ">
+                                <rect key="frame" x="48" y="272" width="279" height="32"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="32" id="YxX-1G-B7S"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <state key="normal" title="Sign out"/>
@@ -34,14 +53,23 @@
                             </button>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="VCU-NF-zFQ" firstAttribute="top" secondItem="t9a-W3-8v8" secondAttribute="top" id="Ni9-w0-nXD"/>
-                            <constraint firstItem="t9a-W3-8v8" firstAttribute="trailing" secondItem="VCU-NF-zFQ" secondAttribute="trailing" id="VWf-ww-dog"/>
-                            <constraint firstItem="VCU-NF-zFQ" firstAttribute="leading" secondItem="t9a-W3-8v8" secondAttribute="leading" id="efe-xW-369"/>
+                            <constraint firstItem="svj-aa-ADA" firstAttribute="top" secondItem="bnP-HR-5fh" secondAttribute="bottom" constant="32" id="Liw-Yn-stc"/>
+                            <constraint firstItem="unx-sN-1Fn" firstAttribute="centerX" secondItem="svj-aa-ADA" secondAttribute="centerX" id="Nak-Ia-awd"/>
+                            <constraint firstItem="VCU-NF-zFQ" firstAttribute="centerX" secondItem="t9a-W3-8v8" secondAttribute="centerX" id="ZLk-6S-VCF"/>
+                            <constraint firstItem="VCU-NF-zFQ" firstAttribute="leading" secondItem="t9a-W3-8v8" secondAttribute="leading" constant="48" id="efe-xW-369"/>
+                            <constraint firstItem="svj-aa-ADA" firstAttribute="centerX" secondItem="bnP-HR-5fh" secondAttribute="centerX" id="fFx-cA-UQM"/>
+                            <constraint firstItem="bnP-HR-5fh" firstAttribute="centerX" secondItem="t9a-W3-8v8" secondAttribute="centerX" id="gYz-YP-56r"/>
+                            <constraint firstItem="bnP-HR-5fh" firstAttribute="top" secondItem="t9a-W3-8v8" secondAttribute="top" constant="32" id="nVa-Ye-9fl"/>
+                            <constraint firstItem="VCU-NF-zFQ" firstAttribute="top" secondItem="unx-sN-1Fn" secondAttribute="bottom" constant="32" id="qmt-EP-Mee"/>
+                            <constraint firstItem="unx-sN-1Fn" firstAttribute="top" secondItem="svj-aa-ADA" secondAttribute="bottom" constant="14" id="xsE-xB-W1l"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="t9a-W3-8v8"/>
                     </view>
                     <navigationItem key="navigationItem" title="More" id="751-m1-4az"/>
                     <connections>
+                        <outlet property="emailLabel" destination="unx-sN-1Fn" id="nee-Ld-f34"/>
+                        <outlet property="nameLabel" destination="svj-aa-ADA" id="VYj-cV-X7S"/>
+                        <outlet property="profileImage" destination="bnP-HR-5fh" id="GG2-Mg-i0z"/>
                         <outlet property="signOutButton" destination="VCU-NF-zFQ" id="8e5-hC-E6e"/>
                     </connections>
                 </viewController>
